generated/antlr_generated/generated/coasmParser.cpp

// Generated from generated/coasm.g4 by ANTLR 4.13.2


#include "coasmListener.h"

#include "coasmParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CoasmParserStaticData final {
  CoasmParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CoasmParserStaticData(const CoasmParserStaticData&) = delete;
  CoasmParserStaticData(CoasmParserStaticData&&) = delete;
  CoasmParserStaticData& operator=(const CoasmParserStaticData&) = delete;
  CoasmParserStaticData& operator=(CoasmParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag coasmParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<CoasmParserStaticData> coasmParserStaticData = nullptr;

void coasmParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (coasmParserStaticData != nullptr) {
    return;
  }
#else
  assert(coasmParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CoasmParserStaticData>(
    std::vector<std::string>{
      "prog", "line", "directive", "section_directive", "kernel_metadata_start", 
      "kernel_metadata_item", "metadata_entry_line", "metadata_key", "metadata_value", 
      "label", "block", "instruction", "instruction_suffix", "operands", 
      "operand", "immediate", "memory_operand", "memory_address", "line_comment"
    },
    std::vector<std::string>{
      "", "'.text'", "'.global'", "'.type'", "'.start_kernel'", "'opu.kernels:'", 
      "'opu.version:'", "", "", "", "'.shared_memsize'", "'.private_memsize'", 
      "'.cmem_size'", "'.bar_used'", "'.kernel_ctrl'", "'.kernel_mode'", 
      "'.local_framesize'", "", "'.args'", "'.shared'", "'.address_space'", 
      "'.offset'", "'.size'", "'.value_kind'", "'.args:'", "'.shared:'", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "'%'", "'.'", 
      "':'", "','", "'['", "']'", "'{'", "'}'", "'+'", "", "'@'", "", "'function'", 
      "';'"
    },
    std::vector<std::string>{
      "", "TEXT_DIRECTIVE", "GLOBAL_DIRECTIVE", "TYPE_DIRECTIVE", "START_KERNEL", 
      "COASM_KERNELS_DIRECTIVE", "COASM_VERSION_DIRECTIVE", "VERSION_NUMBER", 
      "DASH", "WHITESPACE", "SHARED_MEMSIZE", "PRIVATE_MEMSIZE", "CMEM_SIZE", 
      "BAR_USED", "KERNEL_CTRL", "KERNEL_MODE", "LOCAL_FRAMESIZE", "NAME", 
      "ARGS", "SHARED", "ADDRESS_SPACE", "OFFSET", "SIZE", "VALUE_KIND", 
      "ARGS_START", "SHARED_START", "ARG_NAME_DIRECTIVE", "SHARED_NAME_DIRECTIVE", 
      "ADDRESS_SPACE_TYPE", "VALUE_KIND_TYPE", "OPCODE", "REGISTER", "SPECIAL_REGISTER", 
      "IDENTIFIER", "STRING_LITERAL", "INTEGER_LITERAL", "HEX_LITERAL", 
      "FLOAT_LITERAL", "SIGN", "PERCENT", "DOT", "COLON", "COMMA", "LEFT_BRACKET", 
      "RIGHT_BRACKET", "LEFT_BRACE", "RIGHT_BRACE", "PLUS", "MINUS", "AT_SYMBOL", 
      "TYPE_ATTR", "FUNCTION_KEYWORD", "SEMICOLON", "LINE_COMMENT", "BLOCK_COMMENT", 
      "NEWLINE", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  coasmParserStaticData = std::move(staticData);
}

}

coasmParser::coasmParser(TokenStream *input) : coasmParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

coasmParser::coasmParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  coasmParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *coasmParserStaticData->atn, coasmParserStaticData->decisionToDFA, coasmParserStaticData->sharedContextCache, options);
}

coasmParser::~coasmParser() {
  delete _interpreter;
}

const atn::ATN& coasmParser::getATN() const {
  return *coasmParserStaticData->atn;
}

std::string coasmParser::getGrammarFileName() const {
  return "coasm.g4";
}

const std::vector<std::string>& coasmParser::getRuleNames() const {
  return coasmParserStaticData->ruleNames;
}

const dfa::Vocabulary& coasmParser::getVocabulary() const {
  return coasmParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView coasmParser::getSerializedATN() const {
  return coasmParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

coasmParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* coasmParser::ProgContext::EOF() {
  return getToken(coasmParser::EOF, 0);
}

std::vector<coasmParser::LineContext *> coasmParser::ProgContext::line() {
  return getRuleContexts<coasmParser::LineContext>();
}

coasmParser::LineContext* coasmParser::ProgContext::line(size_t i) {
  return getRuleContext<coasmParser::LineContext>(i);
}


size_t coasmParser::ProgContext::getRuleIndex() const {
  return coasmParser::RuleProg;
}

void coasmParser::ProgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProg(this);
}

void coasmParser::ProgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProg(this);
}

coasmParser::ProgContext* coasmParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, coasmParser::RuleProg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(41);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 45071190309470718) != 0)) {
      setState(38);
      line();
      setState(43);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(44);
    match(coasmParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LineContext ------------------------------------------------------------------

coasmParser::LineContext::LineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t coasmParser::LineContext::getRuleIndex() const {
  return coasmParser::RuleLine;
}

void coasmParser::LineContext::copyFrom(LineContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- CommentLineContext ------------------------------------------------------------------

coasmParser::Line_commentContext* coasmParser::CommentLineContext::line_comment() {
  return getRuleContext<coasmParser::Line_commentContext>(0);
}

tree::TerminalNode* coasmParser::CommentLineContext::NEWLINE() {
  return getToken(coasmParser::NEWLINE, 0);
}

coasmParser::CommentLineContext::CommentLineContext(LineContext *ctx) { copyFrom(ctx); }

void coasmParser::CommentLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCommentLine(this);
}
void coasmParser::CommentLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCommentLine(this);
}
//----------------- InstructionLineContext ------------------------------------------------------------------

coasmParser::InstructionContext* coasmParser::InstructionLineContext::instruction() {
  return getRuleContext<coasmParser::InstructionContext>(0);
}

coasmParser::LabelContext* coasmParser::InstructionLineContext::label() {
  return getRuleContext<coasmParser::LabelContext>(0);
}

coasmParser::Line_commentContext* coasmParser::InstructionLineContext::line_comment() {
  return getRuleContext<coasmParser::Line_commentContext>(0);
}

tree::TerminalNode* coasmParser::InstructionLineContext::NEWLINE() {
  return getToken(coasmParser::NEWLINE, 0);
}

coasmParser::InstructionLineContext::InstructionLineContext(LineContext *ctx) { copyFrom(ctx); }

void coasmParser::InstructionLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInstructionLine(this);
}
void coasmParser::InstructionLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInstructionLine(this);
}
//----------------- EmptyLineContext ------------------------------------------------------------------

tree::TerminalNode* coasmParser::EmptyLineContext::NEWLINE() {
  return getToken(coasmParser::NEWLINE, 0);
}

coasmParser::EmptyLineContext::EmptyLineContext(LineContext *ctx) { copyFrom(ctx); }

void coasmParser::EmptyLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEmptyLine(this);
}
void coasmParser::EmptyLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEmptyLine(this);
}
//----------------- DirectiveLineContext ------------------------------------------------------------------

coasmParser::DirectiveContext* coasmParser::DirectiveLineContext::directive() {
  return getRuleContext<coasmParser::DirectiveContext>(0);
}

coasmParser::Line_commentContext* coasmParser::DirectiveLineContext::line_comment() {
  return getRuleContext<coasmParser::Line_commentContext>(0);
}

tree::TerminalNode* coasmParser::DirectiveLineContext::NEWLINE() {
  return getToken(coasmParser::NEWLINE, 0);
}

coasmParser::DirectiveLineContext::DirectiveLineContext(LineContext *ctx) { copyFrom(ctx); }

void coasmParser::DirectiveLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDirectiveLine(this);
}
void coasmParser::DirectiveLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDirectiveLine(this);
}
//----------------- LabelLineContext ------------------------------------------------------------------

coasmParser::LabelContext* coasmParser::LabelLineContext::label() {
  return getRuleContext<coasmParser::LabelContext>(0);
}

coasmParser::Line_commentContext* coasmParser::LabelLineContext::line_comment() {
  return getRuleContext<coasmParser::Line_commentContext>(0);
}

tree::TerminalNode* coasmParser::LabelLineContext::NEWLINE() {
  return getToken(coasmParser::NEWLINE, 0);
}

coasmParser::LabelLineContext::LabelLineContext(LineContext *ctx) { copyFrom(ctx); }

void coasmParser::LabelLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLabelLine(this);
}
void coasmParser::LabelLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLabelLine(this);
}
//----------------- BlockLineContext ------------------------------------------------------------------

coasmParser::BlockContext* coasmParser::BlockLineContext::block() {
  return getRuleContext<coasmParser::BlockContext>(0);
}

coasmParser::Line_commentContext* coasmParser::BlockLineContext::line_comment() {
  return getRuleContext<coasmParser::Line_commentContext>(0);
}

tree::TerminalNode* coasmParser::BlockLineContext::NEWLINE() {
  return getToken(coasmParser::NEWLINE, 0);
}

coasmParser::BlockLineContext::BlockLineContext(LineContext *ctx) { copyFrom(ctx); }

void coasmParser::BlockLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlockLine(this);
}
void coasmParser::BlockLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlockLine(this);
}
coasmParser::LineContext* coasmParser::line() {
  LineContext *_localctx = _tracker.createInstance<LineContext>(_ctx, getState());
  enterRule(_localctx, 2, coasmParser::RuleLine);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(82);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<coasmParser::DirectiveLineContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(46);
      directive();
      setState(48);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
      case 1: {
        setState(47);
        line_comment();
        break;
      }

      default:
        break;
      }
      setState(51);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
      case 1: {
        setState(50);
        match(coasmParser::NEWLINE);
        break;
      }

      default:
        break;
      }
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<coasmParser::LabelLineContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(53);
      label();
      setState(55);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
      case 1: {
        setState(54);
        line_comment();
        break;
      }

      default:
        break;
      }
      setState(58);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
      case 1: {
        setState(57);
        match(coasmParser::NEWLINE);
        break;
      }

      default:
        break;
      }
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<coasmParser::InstructionLineContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(61);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == coasmParser::IDENTIFIER) {
        setState(60);
        label();
      }
      setState(63);
      instruction();
      setState(65);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
      case 1: {
        setState(64);
        line_comment();
        break;
      }

      default:
        break;
      }
      setState(68);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
      case 1: {
        setState(67);
        match(coasmParser::NEWLINE);
        break;
      }

      default:
        break;
      }
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<coasmParser::BlockLineContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(70);
      block();
      setState(72);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
      case 1: {
        setState(71);
        line_comment();
        break;
      }

      default:
        break;
      }
      setState(75);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
      case 1: {
        setState(74);
        match(coasmParser::NEWLINE);
        break;
      }

      default:
        break;
      }
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<coasmParser::CommentLineContext>(_localctx);
      enterOuterAlt(_localctx, 5);
      setState(77);
      line_comment();
      setState(79);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
      case 1: {
        setState(78);
        match(coasmParser::NEWLINE);
        break;
      }

      default:
        break;
      }
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<coasmParser::EmptyLineContext>(_localctx);
      enterOuterAlt(_localctx, 6);
      setState(81);
      match(coasmParser::NEWLINE);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DirectiveContext ------------------------------------------------------------------

coasmParser::DirectiveContext::DirectiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

coasmParser::Section_directiveContext* coasmParser::DirectiveContext::section_directive() {
  return getRuleContext<coasmParser::Section_directiveContext>(0);
}

tree::TerminalNode* coasmParser::DirectiveContext::START_KERNEL() {
  return getToken(coasmParser::START_KERNEL, 0);
}

tree::TerminalNode* coasmParser::DirectiveContext::IDENTIFIER() {
  return getToken(coasmParser::IDENTIFIER, 0);
}

coasmParser::Kernel_metadata_startContext* coasmParser::DirectiveContext::kernel_metadata_start() {
  return getRuleContext<coasmParser::Kernel_metadata_startContext>(0);
}

coasmParser::Kernel_metadata_itemContext* coasmParser::DirectiveContext::kernel_metadata_item() {
  return getRuleContext<coasmParser::Kernel_metadata_itemContext>(0);
}

tree::TerminalNode* coasmParser::DirectiveContext::COASM_VERSION_DIRECTIVE() {
  return getToken(coasmParser::COASM_VERSION_DIRECTIVE, 0);
}

tree::TerminalNode* coasmParser::DirectiveContext::VERSION_NUMBER() {
  return getToken(coasmParser::VERSION_NUMBER, 0);
}

tree::TerminalNode* coasmParser::DirectiveContext::INTEGER_LITERAL() {
  return getToken(coasmParser::INTEGER_LITERAL, 0);
}


size_t coasmParser::DirectiveContext::getRuleIndex() const {
  return coasmParser::RuleDirective;
}

void coasmParser::DirectiveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDirective(this);
}

void coasmParser::DirectiveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDirective(this);
}

coasmParser::DirectiveContext* coasmParser::directive() {
  DirectiveContext *_localctx = _tracker.createInstance<DirectiveContext>(_ctx, getState());
  enterRule(_localctx, 4, coasmParser::RuleDirective);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(92);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case coasmParser::TEXT_DIRECTIVE:
      case coasmParser::GLOBAL_DIRECTIVE:
      case coasmParser::TYPE_DIRECTIVE: {
        enterOuterAlt(_localctx, 1);
        setState(84);
        section_directive();
        break;
      }

      case coasmParser::START_KERNEL: {
        enterOuterAlt(_localctx, 2);
        setState(85);
        match(coasmParser::START_KERNEL);
        setState(86);
        match(coasmParser::IDENTIFIER);
        break;
      }

      case coasmParser::COASM_KERNELS_DIRECTIVE: {
        enterOuterAlt(_localctx, 3);
        setState(87);
        kernel_metadata_start();
        break;
      }

      case coasmParser::DASH: {
        enterOuterAlt(_localctx, 4);
        setState(88);
        kernel_metadata_item();
        break;
      }

      case coasmParser::COASM_VERSION_DIRECTIVE: {
        enterOuterAlt(_localctx, 5);
        setState(89);
        match(coasmParser::COASM_VERSION_DIRECTIVE);
        break;
      }

      case coasmParser::VERSION_NUMBER: {
        enterOuterAlt(_localctx, 6);
        setState(90);
        match(coasmParser::VERSION_NUMBER);
        setState(91);
        match(coasmParser::INTEGER_LITERAL);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Section_directiveContext ------------------------------------------------------------------

coasmParser::Section_directiveContext::Section_directiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* coasmParser::Section_directiveContext::TEXT_DIRECTIVE() {
  return getToken(coasmParser::TEXT_DIRECTIVE, 0);
}

tree::TerminalNode* coasmParser::Section_directiveContext::GLOBAL_DIRECTIVE() {
  return getToken(coasmParser::GLOBAL_DIRECTIVE, 0);
}

tree::TerminalNode* coasmParser::Section_directiveContext::IDENTIFIER() {
  return getToken(coasmParser::IDENTIFIER, 0);
}

tree::TerminalNode* coasmParser::Section_directiveContext::TYPE_DIRECTIVE() {
  return getToken(coasmParser::TYPE_DIRECTIVE, 0);
}

tree::TerminalNode* coasmParser::Section_directiveContext::COMMA() {
  return getToken(coasmParser::COMMA, 0);
}

tree::TerminalNode* coasmParser::Section_directiveContext::TYPE_ATTR() {
  return getToken(coasmParser::TYPE_ATTR, 0);
}


size_t coasmParser::Section_directiveContext::getRuleIndex() const {
  return coasmParser::RuleSection_directive;
}

void coasmParser::Section_directiveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSection_directive(this);
}

void coasmParser::Section_directiveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSection_directive(this);
}

coasmParser::Section_directiveContext* coasmParser::section_directive() {
  Section_directiveContext *_localctx = _tracker.createInstance<Section_directiveContext>(_ctx, getState());
  enterRule(_localctx, 6, coasmParser::RuleSection_directive);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(101);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case coasmParser::TEXT_DIRECTIVE: {
        enterOuterAlt(_localctx, 1);
        setState(94);
        match(coasmParser::TEXT_DIRECTIVE);
        break;
      }

      case coasmParser::GLOBAL_DIRECTIVE: {
        enterOuterAlt(_localctx, 2);
        setState(95);
        match(coasmParser::GLOBAL_DIRECTIVE);
        setState(96);
        match(coasmParser::IDENTIFIER);
        break;
      }

      case coasmParser::TYPE_DIRECTIVE: {
        enterOuterAlt(_localctx, 3);
        setState(97);
        match(coasmParser::TYPE_DIRECTIVE);
        setState(98);
        match(coasmParser::IDENTIFIER);
        setState(99);
        match(coasmParser::COMMA);
        setState(100);
        match(coasmParser::TYPE_ATTR);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Kernel_metadata_startContext ------------------------------------------------------------------
